// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkBox /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <a
    data-radium={true}
    href="#"
    style={
      Object {
        "color": "#222",
        "display": "flex",
        "textDecoration": "none",
      }
    }
  >
    <div
      data-radium={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "2px solid #eee",
          "boxSizing": "border-box",
          "color": "#222",
          "display": "flex",
          "minHeight": 90,
          "width": "100%",
        }
      }
    >
      <div
        className="marger__StyledMarger-q3lecu-0 kAugXk"
      >
        <div
          className="marger__StyledMarger-q3lecu-0 iyINNV"
        >
          <span
            className="k-u-color-font1 k-u-size-default k-u-weight-regular"
            style={
              Object {
                "lineHeight": 1,
              }
            }
          >
            My title
          </span>
        </div>
        
      </div>
      <div
        className="rmq-57ac475b"
        data-radium={true}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "padding": "15px 22px 15px 18px",
            "transition": "all 0.4s ease-in-out",
          }
        }
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right k-ButtonIcon__svg"
          data-radium={true}
          viewBox="0 0 6 6"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </a>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-57ac475b{padding-left: 1.88rem !important;
padding-right: 2rem !important;}}",
      }
    }
  />
</div>
`;

exports[`<LinkBox /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <a
    data-radium={true}
    href="#foobar"
    rel="noopener"
    style={
      Object {
        "color": "#222",
        "display": "flex",
        "textDecoration": "none",
      }
    }
    target="_blank"
  >
    <div
      data-radium={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "2px solid #eee",
          "boxSizing": "border-box",
          "color": "#222",
          "display": "flex",
          "minHeight": 90,
          "width": "100%",
        }
      }
    >
      <div
        className="rmq-d68686c"
        data-radium={true}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#bae8fd",
            "display": "none",
            "justifyContent": "center",
            "marginBottom": -2,
            "marginLeft": -2,
            "marginTop": -2,
            "minWidth": 90,
          }
        }
      />
      <div
        className="marger__StyledMarger-q3lecu-0 kAugXk"
      >
        <div
          className="marger__StyledMarger-q3lecu-0 cGMcrq"
        >
          <span
            className="k-u-color-font1 k-u-size-default k-u-weight-regular"
            style={
              Object {
                "lineHeight": 1,
              }
            }
          >
            Lorem ipsum
          </span>
        </div>
        <span
          className="k-u-color-font1 k-u-size-tiny k-u-weight-light"
          style={
            Object {
              "lineHeight": 1.3,
            }
          }
        >
          In enim justo, rhoncus ut,
        </span>
      </div>
      <div
        className="rmq-57ac475b"
        data-radium={true}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "padding": "15px 22px 15px 18px",
            "transition": "all 0.4s ease-in-out",
          }
        }
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right k-ButtonIcon__svg"
          data-radium={true}
          viewBox="0 0 6 6"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </a>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-d68686c{display: flex !important;}}
@media (min-width: 640px){ .rmq-57ac475b{padding-left: 1.88rem !important;
padding-right: 2rem !important;}}",
      }
    }
  />
</div>
`;
